# pipupgui

./: .gitignore  README.md  auto_upgrade_gui.py  pipupgui.py  pipupgui.toml  requirements.txt
pipupgui/: pyproject.toml
pipupgui-project/: LICENSE  pyproject.toml
pipupgui-project/pipupgui/: __main__.py
pipupgui/pipupgui/: __main__.py
src/: pipupgui.py
